--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="principal">
             <h1>BIENVENIDOS A <br> CIEN CUADRAS</h1>
-            <h5>Encuentra el inmueble que necesitas</h5>
+            <p>Encuentra el inmueble que necesitas</p>
         </section>
         <section class="destacados-section">
             <h2>DESTACADOS</h2>
