--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li> <a href="page/inmobiliaria.html">INMOBILIARIA</a></li>
                     <li> <a href="page/nosotros.html">NOSOTROS</a></li>
                     <li> <a href="page/blog.html">BLOG</a></li>
-                    <li> <a href="page/blog.html" class="login">PERFIL</a></li>
+                    <li> <a href="page/perfil.html" class="login">PERFIL</a></li>
                 </ul>
             </nav>
     </header>
@@ -29,34 +29,78 @@
             <p>Encuentra el inmueble que necesitas</p>
         </section>
         <section class="destacados-section">
-            <h2>DESTACADOS</h2>
-            <div class="destacados-padre">    
-                <div>
-                    <img class="carousel1" src="medios/7176ed96-2702-4498-a686-53bc88a9c0bf.jpg.png" alt="casa de campo">
-                    <p></p>
+            <h2>INMUEBLES DESTACADOS</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center serv">
+                <div class="col-xl-3 col-md-3 col-4">
+                  <div class="card h-100">
+                    <img src="medios/7176ed96-2702-4498-a686-53bc88a9c0bf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
+                    <div class="cardbusqueda">
+                      <h3 class="card-title">Valor de compra:</h3>
+                      <p class="precio">$230.000.000</p>
+                      <p class="ciudad">La Calera</p>
+                      <p class="espacio">3 habitaciones 2 baños</p>
+                    </div>
+                  </div>
                 </div>
-                <div>
-                    <img class="carousel1" src="medios/9491da99-5e8e-4d47-8755-616204e5e8bd.jpeg.png" alt="casa de campo">
+                <div class="col-xl-3 col-md-3 col-4">
+                  <div class="card h-100">
+                    <img src="medios/9491da99-5e8e-4d47-8755-616204e5e8bd.jpeg.png" class="card-img-top" alt="apartamentos en bogota">
+                    <div class="cardbusqueda">
+                        <h3 class="card-title">Valor de compra:</h3>
+                        <p class="precio">$95.000.000</p>
+                        <p class="ciudad">La Vega</p>
+                        <p class="espacio">3 habitaciones - 2 baños</p>
+                    </div>
+                  </div>
                 </div>
-                <div>
-                    <img class="carousel1" src="medios/a56622f5-8669-4175-b983-a996418eddbf.jpg.png" alt="casa de campo">
-                </div> 
+                <div class="col-xl-3 col-md-3 col-4">
+                  <div class="card h-100">
+                    <img src="medios/a56622f5-8669-4175-b983-a996418eddbf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
+                    <div class="cardbusqueda">
+                        <h3 class="card-title">Valor de compra:</h3>
+                        <p class="precio">$143.500.000</p>
+                        <p class="ciudad">Chía</p>
+                        <p class="espacio">3 habitaciones 2 baños</p>
+                    </div>
+                  </div>
+                </div>
             </div>
         </section>
         <section class="recientes-section">
             <h2>VISTOS RECIENTEMENTE</h2>
-            <div class="recientes-padre">  
-                <div> 
-                    <img class="carousel2" src="medios/regency-boutique.jpg" alt="venta apartamento">
+            <div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center justify-content-space-around serv">
+                <div class="col-xl-3 col-md-3 col-4">
+                  <div class="card h-100">
+                    <img src="medios/regency-boutique.jpg" class="card-img-top" alt="apartamentos en bogota">
+                    <div class="cardbusqueda">
+                      <h3 class="card-title">Valor de compra:</h3>
+                      <p class="precio">$125.000.000</p>
+                      <p class="ciudad">Bogotá, Chicó</p>
+                      <p class="espacio">3 habitaciones 2 baños</p>
+                    </div>
+                  </div>
                 </div>
-                <div>
-                    <img class="carousel2" src="medios/tarjeta-mediterraneo_0.jpg.png" alt="venta apartamento">
+                <div class="col-xl-3 col-md-3 col-4">
+                  <div class="card h-100">
+                    <img src="medios/Fachada_3.jpg" class="card-img-top" alt="apartamentos en bogota">
+                    <div class="cardbusqueda">
+                        <h3 class="card-title">Valor de compra:</h3>
+                        <p class="precio">$138.000.000</p>
+                        <p class="ciudad">Bogotá, Colina Campestre</p>
+                        <p class="espacio">3 habitaciones - 2 baños</p>
+                    </div>
+                  </div>
                 </div>
-                <div>
-                    <img class="carousel2" src="medios/vissani-apartamentos-bogota-fachada.jpg" alt="venta apartamento">
-                </div>
-                <div>
-                    <img class="carousel2" src="medios/Fachada_3.jpg" alt="">
+                <div class="col-xl-3 col-md-3 col-4">
+                  <div class="card h-100">
+                    <img src="medios/vissani-apartamentos-bogota-fachada.jpg" class="card-img-top" alt="apartamentos en bogota">
+                    <div class="cardbusqueda">
+                        <h3 class="card-title">Valor de compra:</h3>
+                        <p class="precio">$98.200.000</p>
+                        <p class="ciudad">Bogotá, San  Cristóbal</p>
+                        <p class="espacio">3 habitaciones 2 baños</p>
+                    </div>
+                  </div>
                 </div>
             </div>
         </section>
