--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
     </head>
 <body>
     <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navegador">
+            <div class="container-fluid">
+                <a href="index.html">
+                    <img class="logo" src="medios/logo.svg" alt="Casa en arriendo">
+                </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse barranav" id="navbarNavAltMarkup">
+                <div class="navbar-nav" id="barranav">
+                    <a class="nav-link" href="page/inmobiliaria.html">Inmobiliaria</a>
+                    <a class="nav-link" href="page/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="page/blog.html">Blog</a>
+                    <a class="nav-link" href="page/perfil.html" >Perfil</a>
+                </div>
+              </div>
+            </div>
+        </nav>
+        <!--
         <a href="index.html">
                 <img class="logo" src="medios/logo.svg" alt="Casa en arriendo">
             </a>
@@ -22,6 +41,7 @@
                     <li> <a href="page/perfil.html" class="login">PERFIL</a></li>
                 </ul>
             </nav>
+        -->
     </header>
     <main>
         <section class="principal">
