--- a/index.html
+++ b/index.html
@@ -52,37 +52,43 @@
             <h2>INMUEBLES DESTACADOS</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center serv">
                 <div class="col-xl-3 col-md-3 col-4">
-                  <div class="card h-100">
-                    <img src="medios/7176ed96-2702-4498-a686-53bc88a9c0bf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
-                    <div class="cardbusqueda">
-                      <h3 class="card-title">Valor de compra:</h3>
-                      <p class="precio">$230.000.000</p>
-                      <p class="ciudad">La Calera</p>
-                      <p class="espacio">3 habitaciones 2 baños</p>
-                    </div>
-                  </div>
+                    <a class="nav-link" href="page/resultados.html">
+                        <div class="card h-100">
+                            <img src="medios/7176ed96-2702-4498-a686-53bc88a9c0bf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
+                            <div class="cardbusqueda">
+                            <h3 class="card-title">Valor de compra:</h3>
+                            <p class="precio">$230.000.000</p>
+                            <p class="ciudad">La Calera</p>
+                            <p class="espacio">3 habitaciones 2 baños</p>
+                            </div>
+                        </div>
+                    </a>    
                 </div>
                 <div class="col-xl-3 col-md-3 col-4">
-                  <div class="card h-100">
-                    <img src="medios/9491da99-5e8e-4d47-8755-616204e5e8bd.jpeg.png" class="card-img-top" alt="apartamentos en bogota">
-                    <div class="cardbusqueda">
-                        <h3 class="card-title">Valor de compra:</h3>
-                        <p class="precio">$95.000.000</p>
-                        <p class="ciudad">La Vega</p>
-                        <p class="espacio">3 habitaciones - 2 baños</p>
-                    </div>
-                  </div>
+                    <a class="nav-link" href="page/resultados.html">
+                        <div class="card h-100">
+                            <img src="medios/9491da99-5e8e-4d47-8755-616204e5e8bd.jpeg.png" class="card-img-top" alt="apartamentos en bogota">
+                            <div class="cardbusqueda">
+                                <h3 class="card-title">Valor de compra:</h3>
+                                <p class="precio">$95.000.000</p>
+                                <p class="ciudad">La Vega</p>
+                                <p class="espacio">3 habitaciones - 2 baños</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-xl-3 col-md-3 col-4">
-                  <div class="card h-100">
-                    <img src="medios/a56622f5-8669-4175-b983-a996418eddbf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
-                    <div class="cardbusqueda">
-                        <h3 class="card-title">Valor de compra:</h3>
-                        <p class="precio">$143.500.000</p>
-                        <p class="ciudad">Chía</p>
-                        <p class="espacio">3 habitaciones 2 baños</p>
-                    </div>
-                  </div>
+                    <a class="nav-link" href="page/resultados.html">
+                        <div class="card h-100">
+                            <img src="medios/a56622f5-8669-4175-b983-a996418eddbf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
+                            <div class="cardbusqueda">
+                                <h3 class="card-title">Valor de compra:</h3>
+                                <p class="precio">$143.500.000</p>
+                                <p class="ciudad">Chía</p>
+                                <p class="espacio">3 habitaciones 2 baños</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -90,37 +96,43 @@
             <h2>VISTOS RECIENTEMENTE</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center justify-content-space-around serv">
                 <div class="col-xl-3 col-md-3 col-4">
-                  <div class="card h-100">
-                    <img src="medios/regency-boutique.jpg" class="card-img-top" alt="apartamentos en bogota">
-                    <div class="cardbusqueda">
-                      <h3 class="card-title">Valor de compra:</h3>
-                      <p class="precio">$125.000.000</p>
-                      <p class="ciudad">Bogotá, Chicó</p>
-                      <p class="espacio">3 habitaciones 2 baños</p>
-                    </div>
-                  </div>
+                    <a class="nav-link" href="page/resultados.html">
+                        <div class="card h-100">
+                            <img src="medios/regency-boutique.jpg" class="card-img-top" alt="apartamentos en bogota">
+                            <div class="cardbusqueda">
+                            <h3 class="card-title">Valor de compra:</h3>
+                            <p class="precio">$125.000.000</p>
+                            <p class="ciudad">Bogotá, Chicó</p>
+                            <p class="espacio">3 habitaciones 2 baños</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-xl-3 col-md-3 col-4">
-                  <div class="card h-100">
-                    <img src="medios/Fachada_3.jpg" class="card-img-top" alt="apartamentos en bogota">
-                    <div class="cardbusqueda">
-                        <h3 class="card-title">Valor de compra:</h3>
-                        <p class="precio">$138.000.000</p>
-                        <p class="ciudad">Bogotá, Colina Campestre</p>
-                        <p class="espacio">3 habitaciones - 2 baños</p>
-                    </div>
-                  </div>
+                    <a class="nav-link" href="page/resultados.html">
+                        <div class="card h-100">
+                            <img src="medios/Fachada_3.jpg" class="card-img-top" alt="apartamentos en bogota">
+                            <div class="cardbusqueda">
+                                <h3 class="card-title">Valor de compra:</h3>
+                                <p class="precio">$138.000.000</p>
+                                <p class="ciudad">Bogotá, Colina Campestre</p>
+                                <p class="espacio">3 habitaciones - 2 baños</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-xl-3 col-md-3 col-4">
-                  <div class="card h-100">
-                    <img src="medios/vissani-apartamentos-bogota-fachada.jpg" class="card-img-top" alt="apartamentos en bogota">
-                    <div class="cardbusqueda">
-                        <h3 class="card-title">Valor de compra:</h3>
-                        <p class="precio">$98.200.000</p>
-                        <p class="ciudad">Bogotá, San  Cristóbal</p>
-                        <p class="espacio">3 habitaciones 2 baños</p>
-                    </div>
-                  </div>
+                    <a class="nav-link" href="page/resultados.html">
+                        <div class="card h-100">
+                            <img src="medios/vissani-apartamentos-bogota-fachada.jpg" class="card-img-top" alt="apartamentos en bogota">
+                            <div class="cardbusqueda">
+                                <h3 class="card-title">Valor de compra:</h3>
+                                <p class="precio">$98.200.000</p>
+                                <p class="ciudad">Bogotá, San  Cristóbal</p>
+                                <p class="espacio">3 habitaciones 2 baños</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
