--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <div class="cardbusqueda">
                             <h3 class="card-title">Valor de compra:</h3>
                             <p class="precio">$125.000.000</p>
-                            <p class="ciudad">Bogotá, Chicó</p>
+                            <p class="ciudad">Bogotá, Suba</p>
                             <p class="espacio">3 habitaciones 2 baños</p>
                             </div>
                         </div>
