--- a/index.html
+++ b/index.html
@@ -24,24 +24,12 @@
                     <a class="nav-link" href="page/inmobiliaria.html">Inmobiliaria</a>
                     <a class="nav-link" href="page/nosotros.html">Nosotros</a>
                     <a class="nav-link" href="page/blog.html">Blog</a>
-                    <a class="nav-link" href="page/perfil.html" >Perfil</a>
+                    <a class="nav-link" href="page/perfil.html" onclick="return false;">Perfil</a>
                 </div>
               </div>
             </div>
         </nav>
-        <!--
-        <a href="index.html">
-                <img class="logo" src="medios/logo.svg" alt="Casa en arriendo">
-            </a>
-            <nav>
-                <ul>
-                    <li> <a href="page/inmobiliaria.html">INMOBILIARIA</a></li>
-                    <li> <a href="page/nosotros.html">NOSOTROS</a></li>
-                    <li> <a href="page/blog.html">BLOG</a></li>
-                    <li> <a href="page/perfil.html" class="login">PERFIL</a></li>
-                </ul>
-            </nav>
-        -->
+      
     </header>
     <main>
         <section class="principal">
@@ -51,9 +39,9 @@
         <section class="destacados-section">
             <h2>INMUEBLES DESTACADOS</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center serv">
-                <div class="col-xl-3 col-md-3 col-4">
+                <div class="col-xl-3 col-md-3 col-7">
                     <a class="nav-link" href="page/resultados.html">
-                        <div class="card h-100">
+                        <div class="card h-100 carruselhov">
                             <img src="medios/7176ed96-2702-4498-a686-53bc88a9c0bf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
                             <div class="cardbusqueda">
                             <h3 class="card-title">Valor de compra:</h3>
@@ -64,9 +52,9 @@
                         </div>
                     </a>    
                 </div>
-                <div class="col-xl-3 col-md-3 col-4">
+                <div class="col-xl-3 col-md-3 col-7">
                     <a class="nav-link" href="page/resultados.html">
-                        <div class="card h-100">
+                        <div class="card h-100 carruselhov">
                             <img src="medios/9491da99-5e8e-4d47-8755-616204e5e8bd.jpeg.png" class="card-img-top" alt="apartamentos en bogota">
                             <div class="cardbusqueda">
                                 <h3 class="card-title">Valor de compra:</h3>
@@ -77,9 +65,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-3 col-md-3 col-4">
+                <div class="col-xl-3 col-md-3 col-7">
                     <a class="nav-link" href="page/resultados.html">
-                        <div class="card h-100">
+                        <div class="card h-100 carruselhov">
                             <img src="medios/a56622f5-8669-4175-b983-a996418eddbf.jpg.png" class="card-img-top" alt="apartamentos en bogota">
                             <div class="cardbusqueda">
                                 <h3 class="card-title">Valor de compra:</h3>
@@ -95,9 +83,9 @@
         <section class="recientes-section">
             <h2>VISTOS RECIENTEMENTE</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center justify-content-space-around serv">
-                <div class="col-xl-3 col-md-3 col-4">
+                <div class="col-xl-3 col-md-3 col-7">
                     <a class="nav-link" href="page/resultados.html">
-                        <div class="card h-100">
+                        <div class="card h-100 carruselhov">
                             <img src="medios/regency-boutique.jpg" class="card-img-top" alt="apartamentos en bogota">
                             <div class="cardbusqueda">
                             <h3 class="card-title">Valor de compra:</h3>
@@ -108,9 +96,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-3 col-md-3 col-4">
+                <div class="col-xl-3 col-md-3 col-7">
                     <a class="nav-link" href="page/resultados.html">
-                        <div class="card h-100">
+                        <div class="card h-100 carruselhov">
                             <img src="medios/Fachada_3.jpg" class="card-img-top" alt="apartamentos en bogota">
                             <div class="cardbusqueda">
                                 <h3 class="card-title">Valor de compra:</h3>
@@ -121,9 +109,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-3 col-md-3 col-4">
+                <div class="col-xl-3 col-md-3 col-7">
                     <a class="nav-link" href="page/resultados.html">
-                        <div class="card h-100">
+                        <div class="card h-100 carruselhov">
                             <img src="medios/vissani-apartamentos-bogota-fachada.jpg" class="card-img-top" alt="apartamentos en bogota">
                             <div class="cardbusqueda">
                                 <h3 class="card-title">Valor de compra:</h3>
